2002-05-20 16:12 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Made sure that `indent-line-function' is
	a buffer local variable before setting it to `xbase-indent-line'.

2002-05-20 14:39 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Renamed symbols using "select" in their name to
	"do-case".

2002-05-20 10:13 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Changed `mode-name' from "xBase" to
	"Xbase".

2002-05-20 10:09 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-label-regexp): Removed.

2002-05-20 10:08 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-*-regexp): Made all lower case.
	(xbase-indent-level): Bind `case-fold-search' to t so that regular
	expression matches are case insensitive.

2002-05-18 12:03 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-indent-level): Removed code that saved `point'
	it wasn't necessary because `save-excursion' is being used.

2002-05-18 11:39 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Added autoload marker.

2002-05-18 11:38 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Actually use `xbase-mode-map'.
	Set all values in one `setq'.

2002-05-18 11:37 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-case-regexp): Added "otherwise".
